# ctmsn

./: .cursorrules  .dockerignore  .env.example  .gitignore  CLAUDE.md  DOCUMENTATION_SUMMARY.md  FAST_SMITH_IMPLEMENTATION.md  FISHING_IMPLEMENTATION.md  FORCING_IMPLEMENTATION.md  Makefile  NAVIGATION.md  NAVIGATION_REPORT.md  QUICK_START_NAVIGATION.md  README.md  RELEASE_NOTES.md  SPAWN_IMPLEMENTATION.md  TIME_PROCESS_IMPLEMENTATION.md  UI_IMPLEMENTATION.md  USAGE.md  docker-compose.yml  pyproject.toml
apps/: .gitignore  run_dev.sh
deploy/: nginx.conf  renew-certs.sh  setup.sh
docs/: EXAM_10MIN_CLEAN_SLATE.md  LAB1_UNIVERSITY_INSTRUCTION.md  LAB2_SCENARIOS_INSTRUCTION.md  LAB3_FORMULAS_INSTRUCTION.md  LAB4_FORCING_INSTRUCTION.md  LAB5_INHERITANCE_INSTRUCTION.md  LAB6_WORKFLOW_INSTRUCTION.md  ROADMAP-ASP.md  THEORY.md  VERIFICATION.md  deep-research-report-asp.md
specs/: Transition.cfg  Transition.tla  Transition_leaky.cfg  check.sh
tests/: conftest.py  e2e_auth.py  e2e_bug_reports.py  e2e_contradictions_banner.py  e2e_edit_scenario_variable.py  e2e_edit_variable.py  e2e_editors.py  e2e_editors_vars.py  e2e_facts_display.py  e2e_fast_smith_equations.py  e2e_forcing.py  e2e_forcing_scenario_results.py  e2e_formula_user_variables.py  e2e_formulas_advanced.py  e2e_grade_display.py  e2e_grades.py  e2e_graph_labels_panel.py  e2e_help_panel.py  e2e_help_panel_scenario.py  e2e_lab1_university.py  e2e_lab2.py  e2e_lab3_formulas.py  e2e_lacks_contradiction.py  e2e_network_editor.py  e2e_panels.py  e2e_scenarios.py  e2e_teacher.py  e2e_teacher_readonly_workspace.py  e2e_teacher_workspace_names.py  e2e_transition.py  e2e_undo_redo.py  e2e_unset_variable.py  e2e_user_variable_assign.py  e2e_user_variable_controls.py  e2e_workspace_mgmt.py  test_baselines.py  test_contradiction_guard.py  (+9 more)
(+200 files in other folders)
