[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ctmsn"
version = "0.1.0"
description = "Composable Typed Modules for Semantic Networks"
requires-python = ">=3.9"
dependencies = []

# Внешние зависимости допускаются только для экспериментального контура
# (statistics). Ядро ctmsn (core/param/logic/forcing/transition) — zero-dependency.
[project.optional-dependencies]
experiment = ["numpy>=1.24", "scipy>=1.10", "statsmodels>=0.14"]

[tool.setuptools]
package-dir = {"" = "src"}
