[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ctmsn"
version = "0.1.0"
description = "Composable Typed Modules for Semantic Networks"
requires-python = ">=3.9"
dependencies = []

# Внешние зависимости допускаются только для экспериментального контура
# (statistics). Ядро ctmsn (core/param/logic/forcing/transition) — zero-dependency.
[project.optional-dependencies]
experiment = ["numpy>=1.24", "scipy>=1.10", "statsmodels>=0.14"]
io = ["PyYAML>=6.0"]
dev = ["pytest>=7", "ruff>=0.5", "mypy>=1.8"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.ruff]
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E741", "E501"]  # неоднозначные имена/длина строк — нерелевантны для math-кода

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
# Строгая типизация — для модулей, добавленных дорожной картой; ядро/сценарии
# типизированы исторически нестрого и проверяются отдельно.
files = ["src/ctmsn/transition", "src/ctmsn/experiment", "src/ctmsn/io"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
